View Issue Details Jump to Notes ] Print ]
IDProjectCategoryView StatusDate SubmittedLast Update
0015994CMakeCMakepublic2016-02-29 11:212016-06-10 14:31
ReporterSteven Newbury 
Assigned ToKitware Robot 
PrioritynormalSeverityminorReproducibilityalways
StatusclosedResolutionmoved 
PlatformOSOS Version
Product VersionCMake 3.4.3 
Target VersionFixed in Version 
Summary0015994: CMake support for the Linux x86-64 32-bit ABI (x32-abi)
DescriptionCurrently CMake assumes library files can be located in ${CMAKE_INSTALL_PREFIX}/lib{64}, or otherwise on the system in /lib{64}, /usr/lib{64} etc. This isn't the case with x32-abi, where library directories are postfixed with x32, for example: ${CMAKE_INSTALL_PREFIX}/libx32

This results in CMake modules being unable to locate their resources, including failure during the configuration of CMake itself after initial bootstrap if CMAKE_INSTALL_PREFIX and individual *_DIR=/usr/libx32/cmake/* variables aren't manually provided.
Steps To ReproduceBuild CMake from source on x32. Attempt to build projects with CMake.
Additional InformationThe attached patch is from pld-linux, a similar patch also exists for Gentoo Linux. This gives CMake the extra knowledge necessary to successfully locate the library paths on x32-abi.

Perhaps, in the future a centralised CMake facility could provide system library paths?
TagsNo tags attached.
Attached Filespatch file icon cmake-libx32.patch [^] (11,944 bytes) 2016-02-29 11:21 [Show Content]

 Relationships
related to 0011260closedBill Hoffman Add GLOBAL FIND_LIBRARY_USE_LIB32_PATHS property, whose behavior is like FIND_LIBRARY_USE_LIB64_PATHS 

  Notes
(0040583)
Steven Newbury (reporter)
2016-02-29 11:54

See also: https://bugs.gentoo.org/426936 [^]
(0040584)
Brad King (manager)
2016-02-29 11:56

The patch appears to be hard-coded for use on packaging CMake for the x32 architecture. Several places replace "lib/" with "libx32/" unconditionally. Therefore additional work will be needed to make such a change upstreamable. It may be easier to do this in pieces.

Such discussion would be better held on the developer list:

 https://cmake.org/mailman/listinfo/cmake-developers [^]
(0040814)
Mike Frysinger (reporter)
2016-04-05 10:04

this is a dupe of bug 11260
(0040815)
Brad King (manager)
2016-04-05 10:08

Re 0015994:0040814: Yes, thanks. If anyone wants to move the issue forward please pick up the patch attached to 0011260, rebase/revise as needed on 'master', and bring it to the dev mailing list linked in 0015994:0040584.
(0040817)
GreatEmerald (reporter)
2016-04-05 12:14

Is it really a duplicate? The linked bug is talking about lib32, whereas the issue here is libx32. Those are distinct paths.
(0042948)
Kitware Robot (administrator)
2016-06-10 14:29

Resolving issue as `moved`.

This issue tracker is no longer used. Further discussion of this issue may take place in the current CMake Issues page linked in the banner at the top of this page.

 Issue History
Date Modified Username Field Change
2016-02-29 11:21 Steven Newbury New Issue
2016-02-29 11:21 Steven Newbury File Added: cmake-libx32.patch
2016-02-29 11:54 Steven Newbury Note Added: 0040583
2016-02-29 11:56 Brad King Note Added: 0040584
2016-04-05 10:04 Mike Frysinger Note Added: 0040814
2016-04-05 10:08 Brad King Note Added: 0040815
2016-04-05 10:08 Brad King Relationship added duplicate of 0011260
2016-04-05 10:08 Brad King Status new => resolved
2016-04-05 10:08 Brad King Resolution open => duplicate
2016-04-05 12:14 GreatEmerald Note Added: 0040817
2016-04-05 12:55 Brad King Relationship replaced related to 0011260
2016-04-05 12:55 Brad King Status resolved => acknowledged
2016-04-05 12:55 Brad King Resolution duplicate => open
2016-06-10 14:29 Kitware Robot Note Added: 0042948
2016-06-10 14:29 Kitware Robot Status acknowledged => resolved
2016-06-10 14:29 Kitware Robot Resolution open => moved
2016-06-10 14:29 Kitware Robot Assigned To => Kitware Robot
2016-06-10 14:31 Kitware Robot Status resolved => closed


Copyright © 2000 - 2018 MantisBT Team